--- a/templates/app.component.html
+++ b/templates/app.component.html
@@ -1,4 +1,5 @@
 <a [routerLink]="['home']" routerLinkActive="active">首页</a>
 <a [routerLink]="['contact']" routerLinkActive="active">联系我们</a>
 <a [routerLink]="['about']" routerLinkActive="active">关于我们</a>
+<a [routerLink]="['about/list']" routerLinkActive="active">我们列表</a>
 <router-outlet></router-outlet>
